<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <View
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/ic_wave"
        />

    <View
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:background="@drawable/ic_baseline_music_note_24"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/displayed_app_name"
        android:textSize="40sp"
        android:textColor="@color/black"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:id="@+id/btn_view_profile"
        android:text="@string/btn_vp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:id="@+id/btn_login"
        android:text="@string/btn_lg"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />

</LinearLayout>