<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/displayed_login"
        android:textSize="40sp"
        android:textColor="@color/black"
        />

    <View
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:background="@drawable/ic_baseline_music_note_24"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/displayed_app_name"
        android:textSize="40sp"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_edit_text">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_person"/>

        <EditText
            android:id="@+id/enter_username"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="Enter Username"
            android:background="@null"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_edit_text">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_lock"/>

        <EditText
            android:id="@+id/enter_pw"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="Enter Password"
            android:inputType="textPassword"
            android:background="@null"/>

    </LinearLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/submit_lg"
        android:text="@string/btn_lg"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/round_button"/>

</LinearLayout>